--- a/src/components/HeaderComponent/HeaderComponent.css
+++ b/src/components/HeaderComponent/HeaderComponent.css
@@ -52,7 +52,7 @@
   .nav a {
     color: #fff;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 20px;
     position: relative;
     transition: color 0.3s ease;
@@ -78,4 +78,38 @@
   .nav a:hover::after {
     transform: scaleX(1);
   }
+
+  .nav-login_button {
+    background: none;
+    border: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+    position: relative;
+    cursor: pointer;
+    padding: 0;
+    transition: color 0.3s ease;
+  }
+  
+  .nav-login_button::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    width: 100%;
+    height: 2px;
+    background-color: #FFB03B;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+  }
+  
+  .nav-login_button:hover {
+    color: #FFB03B;
+  }
+  
+  .nav-login_button:hover::after {
+    transform: scaleX(1);
+  }
+  
   
