--- a/src/components/LoginComponent/LoginComponent.css
+++ b/src/components/LoginComponent/LoginComponent.css
@@ -56,7 +56,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
   
   .login-button {
@@ -83,10 +83,12 @@
     font-size: 14px;
     text-decoration: none;
     cursor: pointer;
-    margin-top: 12px;
+    margin-top: 16px;
     text-align: center;
     font-weight: 600;
+    float: right; /* Di chuyển button sang phía bên phải */
   }
+  
   
   .forgot-password-btn:hover {
     color: #DBAD34;
@@ -94,6 +96,7 @@
 
   .login-divider {
     margin: 20px 0;
+    margin-top: 50px;
     border: none;
     border-top: 2px solid #e0dfdf;
     width: 100%;
@@ -124,6 +127,13 @@
   .signup-button:hover {
     background-color: #DBAD34;
     color: white;
+  }
+
+  .error-message {
+    color: red;
+    font-size: 16px;
+    margin-bottom: 10px;
+    text-align: start;
   }
 
 
