--- a/src/components/SignupComponent/SignupComponent.css
+++ b/src/components/SignupComponent/SignupComponent.css
@@ -149,6 +149,13 @@
     margin-bottom: 30px;
     font-size: 16px;
   }
+
+  .success-message {
+    color: green;
+    font-size: 16px;
+    margin-bottom: 10px;
+    text-align: start;
+  }
   
   
   
