--- a/src/components/MoviePage/MoviePage.css
+++ b/src/components/MoviePage/MoviePage.css
@@ -1,75 +1,154 @@
 .movie-page {
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .tabs {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
-    justify-content: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-.tabs button {
-    background: none;
-    border: none;
-    color: #000;
-    font-size: 16px;
-    cursor: pointer;
-    padding: 10px 0;
-    position: relative;
-    transition: color 0.3s ease;
+.tabs-buttons button {
+  background: none;
+  border: none;
+  color: #7f7f7f;
+  font-size: 22px;
+  font-weight: bold;
+  font-family: monospace;
+  margin-right: 24px;
+  cursor: pointer;
+  padding: 10px 0;
+  position: relative;
+  transition: color 0.3s ease;
 }
 
-.tabs button.active {
-    color: #0056b3;
-    font-weight: bold;
+.tabs-buttons button.active {
+  color: #0056b3;
+  font-weight: bold;
 }
 
-.tabs button.active::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 2px;
-    background-color: #0056b3;
-    border-radius: 2px;
+.tabs-buttons button.active::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background-color: #0056b3;
+  border-radius: 2px;
 }
 
-.tabs button:hover {
-    color: #0056b3;
+.tabs-buttons button:hover {
+  color: #0056b3;
 }
 
 .movies-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 phim mỗi hàng */
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 phim mỗi hàng */
+  gap: 24px;
 }
 
 .movie-card {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    cursor: pointer;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    text-align: center;
+  position: relative;
+  background-color: #fff;
+  border-radius: 10px;
+  width: 282px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  height: 450px;
+  overflow: hidden;
+  cursor: pointer;
+  font-family: monospace;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-align: center;
 }
 
 .movie-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.admin-controls {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 16px 20px;
+  border-radius: 20px;
+}
+
+.movie-card:hover .admin-controls {
+  display: flex;
+}
+
+.movie-edit-button {
+  background-color: white;
+  color: #ffb03b;
+  border: 2px solid #ffb03b;
+  width: 90px;
+  height: 50px;
+  font-size: 30px;
+  font-family: monospace;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: background 0.2s;
+}
+
+.movie-delete-button {
+  background-color: white;
+  color: #d63737;
+  border: 2px solid #d63737; 
+  width: 90px;
+  height: 50px;
+  font-size: 30px;
+  font-family: monospace;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: background 0.2s;
+}
+
+.movie-edit-button:hover {
+  border: none;
+  color: white;
+  background-color: #e09a33;
+}
+
+.movie-delete-button:hover {
+  border: none;
+  color: white;
+  background-color: #b52323;
 }
 
 .movie-image {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: 400px;
 }
 
 .movie-title {
-    font-size: 16px;
-    margin: 10px 0;
-    color: #333;
+  font-size: 16px;
+  margin: 10px 0;
+  color: #333;
+}
+
+.add-movie-button {
+  background-color: #1676d5;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: monospace;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.add-movie-button:hover {
+  background-color: #0846a2;
 }
