--- a/src/components/SignupComponent/SignupComponent.css
+++ b/src/components/SignupComponent/SignupComponent.css
@@ -15,7 +15,7 @@
   
   
   .signup-form {
-    background-color: #F8F2E5;
+    background-color: #ffffff;
     color: black;
     padding: 20px;
     border-radius: 10px;
@@ -50,7 +50,7 @@
   }
 
   .signup-form input {
-    background-color: #F8F2E5;
+    background-color: #ffffff;
     display: block;
     width: 100%;
     margin: 10px 0;
@@ -93,7 +93,7 @@
   }
 
   .login-btn {
-    background-color: #F8F2E5;
+    background-color: #ffffff;
     font-size: 16px;
     font-weight: bold;
     color: #DBAD34;
