--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -14,13 +14,13 @@
     color: #0056b3;
   }
   
-  .tabs {
+  .profile-tabs {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
   }
   
-  .tab-button {
+  .profile-tab-button {
     padding: 10px 20px;
     margin: 0 5px;
     background-color: #f1f1f1;
@@ -31,34 +31,34 @@
     transition: background-color 0.3s ease;
   }
   
-  .tab-button.active {
+  .profile-tab-button.active {
     background-color: #0056b3;
     color: #fff;
     border-color: #0056b3;
   }
   
-  .tab-button:hover {
+  .profile-tab-button:hover {
     background-color: #e0e0e0;
   }
   
-  .tab-content-container {
+  .profile-tab-content-container {
     padding: 20px;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
   
-  .tab-content h2 {
+  .profile-tab-content h2 {
     margin-bottom: 10px;
     color: #333;
   }
   
-  .tab-content ul {
+  .profile-tab-content ul {
     list-style: none;
     padding: 0;
   }
   
-  .tab-content ul li {
+  .profile-tab-content ul li {
     margin-bottom: 10px;
     font-size: 16px;
   }
@@ -79,23 +79,23 @@
     color: red;
   }
   
-  .tab-content form {
+  .profile-tab-content form {
     display: flex;
     flex-direction: column;
     gap: 15px;
   }
   
-  .tab-content form label {
+  .profile-tab-content form label {
     font-size: 16px;
   }
   
-  .tab-content form input {
+  .profile-tab-content form input {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
   
-  .tab-content form button {
+  .profile-tab-content form button {
     padding: 10px 20px;
     background-color: #0275d8;
     color: #fff;
@@ -106,6 +106,6 @@
     transition: background-color 0.3s ease;
   }
   
-  .tab-content form button:hover {
+  .profile-tab-content form button:hover {
     background-color: #025aa5;
   }
