--- a/src/components/RoomsManagement/RoomsManagement.css
+++ b/src/components/RoomsManagement/RoomsManagement.css
@@ -19,6 +19,11 @@
   margin-bottom: 16px;
 }
 
+.room-table thead {
+  background-color: #f5f5f5;
+  border-bottom: 2px solid #0c47be;
+}
+
 .create-btn {
   background-color: #28a745;
   color: white;
@@ -39,7 +44,7 @@
   border-top: 2px solid #0c47be;
   border-right: 2px solid #0c47be;
   border-bottom: 2px solid #0c47be;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .room-table {
@@ -59,8 +64,9 @@
   background-color: #f9f9f9;
   text-transform: uppercase;
   color: #444;
-  font-size: 13px;
-  text-align: left;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: monospace;
 }
 
 .room-type-row {
