--- a/src/pages/MovieDetailPage/MovieDetailPage.css
+++ b/src/pages/MovieDetailPage/MovieDetailPage.css
@@ -94,7 +94,7 @@
   margin-bottom: 20px;
 }
 
-.movies-list  {
+.movies-list {
   position: relative;
   left: 600px;
   bottom: 260px;
@@ -169,4 +169,15 @@
   to {
     opacity: 1;
   }
+}
+
+.movie-showtimes-container {
+  position: absolute;
+  font-family: monospace;
+  margin-left: 50px;
+  font-size: 18px;
+  top: 950px;
+  width: 70%;
+  text-align: justify;
+  background-color: #fff;
 }
