--- a/src/components/BookingDetail/BookingDetail.css
+++ b/src/components/BookingDetail/BookingDetail.css
@@ -2,7 +2,7 @@
 
 .booking-detail {
   word-spacing: -3px;
-  width: 500px;
+  width: 450px;
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: #ffffff;
@@ -21,7 +21,7 @@
   margin-bottom: 1rem;
   font-size: 1.5rem;
   color: #2c3e50;
-  border-bottom: 2px solid #2980b9;
+  border-bottom: 3px solid #0c47be;
   padding-bottom: 0.5rem;
 }
 
@@ -57,7 +57,7 @@
 }
 
 .booking-movie-poster {
-  padding-left: 20px;
+  margin-left: 20px;
   width: 100%;
   height: 100%;
   max-height: 320px;
