--- a/src/components/RoomLayout/RoomLayout.css
+++ b/src/components/RoomLayout/RoomLayout.css
@@ -14,6 +14,7 @@
 }
 
 .room-layout-container {
+  border: 1px solid #ddd;
   background: white;
   justify-content: center;
   overflow-y: auto;
@@ -126,10 +127,11 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  gap: 50px;
+  gap: 40px;
 }
 
 .seat-info-panel > div {
+  margin-left: 100px;
   flex: 1;
 }
 
@@ -137,7 +139,7 @@
 .seat-info-right ul {
   list-style: none;
   padding: 0;
-  margin: 10px 0 0;
+  margin: 20px 0 0;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -163,6 +165,9 @@
 }
 
 .seat.booked {
+  cursor: not-allowed;
+  pointer-events: none;
+  border: 1px solid #d4d4d4;
   background-color: #d4d4d4;
 }
 
