--- a/src/components/RoomsManagement/RoomsManagement.css
+++ b/src/components/RoomsManagement/RoomsManagement.css
@@ -1,8 +1,15 @@
 /* RoomsManagement.css */
 .room-container {
+  background-color: #ffffff;
   padding: 24px;
   width: 1200px;
+  border-radius: 16px;
   margin: 0 auto;
+}
+
+.room-container p {
+  font-size: 20px;
+  color: #373737;
 }
 
 .title {
@@ -20,7 +27,7 @@
 }
 
 .room-table thead {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   border-bottom: 2px solid #0c47be;
 }
 
@@ -61,7 +68,7 @@
 }
 
 .room-table th {
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   text-transform: uppercase;
   color: #444;
   font-size: 16px;
@@ -70,7 +77,7 @@
 }
 
 .room-type-row {
-  background-color: #e2e8f0;
+  background-color: #ffffff;
   font-weight: 600;
 }
 
@@ -137,7 +144,7 @@
 .group-divider td {
   border-top: 2px solid #0c47be;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
 }
 
 .room-modal-overlay {
