--- a/src/components/HeaderComponent/HeaderComponent.css
+++ b/src/components/HeaderComponent/HeaderComponent.css
@@ -2,12 +2,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: linear-gradient(90deg, #0f0f0f, #1c1c1c);
+  background: #062564;
   color: #fff;
-  padding: 16px 40px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+  padding: 8px 40px 8px 40px;
+
   position: sticky;
   top: 0;
+  height: 90px;
   font-family: monospace;
   z-index: 100;
 }
@@ -36,13 +37,17 @@
 }
 
 .logo {
-  font-size: 28px;
-  font-weight: 700;
-  letter-spacing: 1px;
-  color: #ffb03b;
-  text-transform: uppercase;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  text-decoration: none;
+  display: inline-block;
+  line-height: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.logo-image {
+  width: 180px;
+  height: auto;
+  object-fit: contain;
+  display: block;
 }
 
 .nav {
@@ -51,10 +56,10 @@
 }
 
 .nav a {
-  color: #fff;
+  color: #f9f9f9;
   text-decoration: none;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 24px;
   position: relative;
   transition: color 0.3s ease;
 }
@@ -66,14 +71,14 @@
   bottom: -4px;
   width: 100%;
   height: 2px;
-  background-color: #ffb03b;
+  background-color: #0c47be;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.3s ease;
 }
 
 .nav a:hover {
-  color: #ffb03b;
+  color: #0c47be;
 }
 
 .nav a:hover::after {
@@ -84,9 +89,9 @@
   background: none;
   font-family: monospace;
   border: none;
-  color: #fff;
+  color: #f9f9f9;
   font-weight: 700;
-  font-size: 21px;
+  font-size: 25px;
   position: relative;
   cursor: pointer;
   padding: 0;
@@ -100,14 +105,14 @@
   bottom: -4px;
   width: 100%;
   height: 2px;
-  background-color: #ffb03b;
+  background-color: #0c47be;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.3s ease;
 }
 
 .nav-login_button:hover {
-  color: #ffb03b;
+  color: #0c47be;
 }
 
 .nav-login_button:hover::after {
@@ -123,15 +128,15 @@
 .nav-user {
   cursor: pointer;
   font-weight: bold;
-  font-size: 21px;
-  color: #fff;
+  font-size: 25px;
+  color: #f9f9f9;
   padding: 10px 12px;
   position: relative;
   transition: color 0.3s ease;
 }
 
 .nav-user:hover {
-  color: #ffb03b;
+  color: #0c47be;
 }
 
 /* Menu xổ xuống */
@@ -139,8 +144,8 @@
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: #1c1c1c;
-  color: white;
+  background-color: #ffffff;
+  color: #1c1c1c;
   border: 1px solid #444;
   border-radius: 6px;
   display: none;
@@ -161,10 +166,10 @@
 .dropdown-item,
 .dropdown-item:link,
 .dropdown-item:visited {
-  display:flex;
+  display: flex;
   font-family: monospace;
   text-decoration: none;
-  color: white;
+  color: #1c1c1c;
   padding: 8px 16px;
   font-size: 16px;
   font-weight: normal;
@@ -184,8 +189,8 @@
 }
 
 .dropdown-item:hover {
-  background-color: #333;
-  color: #ffb03b;
+  background-color: #f4f4f4;
+  color: #0c47be;
 }
 
 .dropdown-item svg {
