--- a/src/components/SignupComponent/SignupComponent.css
+++ b/src/components/SignupComponent/SignupComponent.css
@@ -62,7 +62,7 @@
   }
   
   .signup-btn {
-    background-color: #DBAD34;
+    background-color: #0c47be;
     font-size: 16px;
     font-weight: bold;
     color: white;
@@ -74,7 +74,7 @@
   }
   
   .signup-btn:hover {
-    background-color: #e28903;
+    background-color: #0137a1;
   }
 
   .signup-divider {
@@ -96,9 +96,9 @@
     background-color: #ffffff;
     font-size: 16px;
     font-weight: bold;
-    color: #DBAD34;
+    color: #0c47be;
     padding: 10px;
-    border: 2px solid #DBAD34;
+    border: 2px solid #0c47be;
     cursor: pointer;
     width: 100%;
     border-radius: 24px;
@@ -107,7 +107,7 @@
   }
   
   .login-btn:hover {
-    background-color: #DBAD34;
+    background-color: #0c47be;
     color: white;
   }
 
