--- a/src/components/BookingDetail/BookingDetail.css
+++ b/src/components/BookingDetail/BookingDetail.css
@@ -104,9 +104,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 16px;
   margin-right: 16px;
   font-weight: bold;
   font-size: 24px;
   color: #0c47be;
 }
+
+.discount-price-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 16px;
+  font-weight: bold;
+  font-size: 24px;
+  color: #be180c;
+}
+
