--- a/src/pages/MovieDetailPage/MovieDetailPage.css
+++ b/src/pages/MovieDetailPage/MovieDetailPage.css
@@ -73,7 +73,7 @@
 }
 /* Cấu hình cho trang chi tiết phim */
 .movie-detail {
-  font-family: Arial, sans-serif;
+  font-family: monospace;
   color: #333;
   position: relative;
   word-spacing: -4px;
@@ -174,6 +174,7 @@
 .movie-showtimes-container {
   position: absolute;
   font-family: monospace;
+  margin-top: 50px;
   margin-left: 50px;
   font-size: 18px;
   top: 950px;
