--- a/src/pages/ProfilePage/UserTickets/UserTickets.css
+++ b/src/pages/ProfilePage/UserTickets/UserTickets.css
@@ -45,9 +45,10 @@
 .booking-details-button {
   font-weight: bold;
   word-spacing: -2px;
-  font-family: monospace;
+
   font-size: 16px;
   background: none;
+  font-family: monospace;
   color: #0c47be;
   border: none;
   cursor: pointer;
@@ -110,4 +111,32 @@
 
 .error-message {
   color: red;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin-top: 20px;
+}
+
+.pagination-button {
+  padding: 8px 16px;
+  font-family: monospace;
+  background-color: #0c47be;
+  color: white;
+  border: none;
+  word-spacing: -3px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.pagination-button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.pagination-info {
+  font-weight: bold;
 }
