--- a/src/components/MovieShowtimes/MovieShowtimes.css
+++ b/src/components/MovieShowtimes/MovieShowtimes.css
@@ -64,8 +64,55 @@
   transition: all 0.2s ease;
 }
 
-
 .schedule-divider {
   border: 2px solid #0c47be;
   margin: 20px 0;
+}
+
+.showtime-type-label {
+  font-weight: 600;
+  margin-top: 8px;
+  margin-bottom: 4px;
+}
+
+.showtime-type-group {
+  margin-bottom: 12px;
+}
+
+.showtimes-table-structured {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.showtimes-row {
+  display: flex;
+  align-items: flex-start;
+}
+
+.theater-group {
+  padding: 50px 0px;
+  border-bottom: 1px solid #ddd;
+}
+
+.theater-name-cell {
+  font-size: 20px;
+  font-weight: bold;
+  align-items: flex-start;
+  margin-right: 20px;
+  width: 240px;
+}
+
+.format-type-cell {
+  align-items: center;
+  width: 150px;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+
+.showtime-badges-cell {
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
