--- a/src/pages/MovieDetailPage/MovieDetailPage.css
+++ b/src/pages/MovieDetailPage/MovieDetailPage.css
@@ -95,9 +95,9 @@
 }
 
 .movies-list {
-  position: relative;
-  left: 600px;
-  bottom: 260px;
+  transform: translateY(-265px);
+  width: 360px;
+  margin-left: auto;
 }
 
 .movie-detail-title {
@@ -181,4 +181,10 @@
   width: 70%;
   text-align: justify;
   background-color: #fff;
+}
+
+@media (max-width: 480px) {
+  .movies-list {
+    display: none;
+  }
 }
