--- a/src/pages/ProfilePage/UserTickets/UserTickets.css
+++ b/src/pages/ProfilePage/UserTickets/UserTickets.css
@@ -140,3 +140,48 @@
 .pagination-info {
   font-weight: bold;
 }
+.booking-tabs {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.booking-tabs button {
+  font-family: monospace;
+  padding: 8px 16px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  background: #eee;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background 0.2s ease-in-out;
+}
+
+.booking-tabs button.active {
+  background: #0c47be;
+  border: 1px solid #0c47be;
+  color: white;
+}
+
+.food-bookings-list ul {
+  list-style: none;
+  padding: 0;
+}
+
+.food-booking-item {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.booking-food-image {
+  width: 100%;
+  height: 100%;
+  min-height: 90px;
+  max-width: 60px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.food-names-preview {
+  font-size: 16px;
+}
