--- a/src/components/LoginComponent/LoginComponent.css
+++ b/src/components/LoginComponent/LoginComponent.css
@@ -1,150 +1,179 @@
-
 .login-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-    font-family: monospace;
-    font-size: 20px;
-  }
-  
-  .login-form {
-    background-color: #ffffff;
-    color: black;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    width: 100%;
-    max-width: 400px; 
-    position: relative;
-    font-family: monospace;
-    margin: 0 auto;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  font-family: monospace;
+  font-size: 20px;
+}
 
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 30px;
-    color: #333;
-    cursor: pointer;
-    transition: color 0.3s ease;
-  }
-  
-  .close-btn:hover {
-    color: #e28903;
-  }
-  
-  .login-form label {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    font-weight: 500;
-    margin-bottom: 10px;
-    gap: 10px;
-  }
+.login-form {
+  background-color: #ffffff;
+  color: black;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  width: 100%;
+  max-width: 400px;
+  position: relative;
+  font-family: monospace;
+  margin: 0 auto;
+}
 
-  .login-form input {
-    background-color: #ffffff;
-    display: block;
-    width: 100%;
-    margin: 10px 0;
-    padding: 10px 10px 10px 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    font-size: 16px;
-    font-family: monospace;
-  }
-  
-  .login-button {
-    background-color: #0c47be;
-    font-size: 18px;
-    font-family: monospace;
-    font-weight: bold;
-    color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    border-radius: 24px;
-  }
-  
-  .login-button:hover {
-    background-color: #0036a1;
-  }
-  
-  .forgot-password-btn {
-    color: #666;
-    width: auto;
-    background: none;
-    border: none;
-    font-size: 16px;
-    text-decoration: none;
-    cursor: pointer;
-    margin-top: 16px;
-    text-align: center;
-    font-weight: 600;
-    font-family: monospace;
-    float: right; /* Di chuyển button sang phía bên phải */
-  }
-  
-  
-  .forgot-password-btn:hover {
-    background: none;
-    color: #0c47be;
-  }
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;
+  color: #333;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
 
-  .login-divider {
-    margin: 20px 0;
-    margin-top: 50px;
-    border: none;
-    border-top: 2px solid #e0dfdf;
-    width: 100%;
-  }
+.close-btn:hover {
+  color: #e28903;
+}
 
-  .register-suggestion {
-    text-align: center;
-    color: #666;
-    margin-top: 10px;
-    font-size: 16px;
-    font-weight: 500;
-  }
+.login-form label {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  gap: 10px;
+}
 
-  .signup-button {
-    background-color: #ffffff;
-    font-size: 18px;
-    font-family: monospace;
-    font-weight: bold;
-    color: #0c47be;
-    padding: 10px;
-    border: 2px solid #0c47be;
-    cursor: pointer;
-    width: 100%;
-    border-radius: 24px;
-    margin-top: 16px;
-    margin-bottom: 16px;
-  }
-  
-  .signup-button:hover {
-    background-color: #0c47be;
-    color: white;
-  }
+.login-form input {
+  background-color: #ffffff;
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px 10px 10px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-family: monospace;
+}
 
-  .error-message {
-    color: red;
-    font-size: 16px;
-    margin-bottom: 10px;
-    text-align: start;
-  }
+.login-button {
+  background-color: #0c47be;
+  font-size: 18px;
+  font-family: monospace;
+  font-weight: bold;
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 24px;
+}
 
+.login-button:hover {
+  background-color: #0036a1;
+}
 
-  
+.forgot-password-btn {
+  color: #666;
+  width: auto;
+  background: none;
+  border: none;
+  font-size: 16px;
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 16px;
+  text-align: center;
+  font-weight: 600;
+  font-family: monospace;
+  float: right; /* Di chuyển button sang phía bên phải */
+}
+
+.forgot-password-btn:hover {
+  background: none;
+  color: #0c47be;
+}
+
+.login-divider {
+  margin: 20px 0;
+  margin-top: 50px;
+  border: none;
+  border-top: 2px solid #e0dfdf;
+  width: 100%;
+}
+
+.register-suggestion {
+  text-align: center;
+  color: #666;
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.signup-button {
+  background-color: #ffffff;
+  font-size: 18px;
+  font-family: monospace;
+  font-weight: bold;
+  color: #0c47be;
+  padding: 10px;
+  border: 2px solid #0c47be;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 24px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.signup-button:hover {
+  background-color: #0c47be;
+  color: white;
+}
+
+.error-message {
+  color: red;
+  font-size: 16px;
+  margin-bottom: 10px;
+  text-align: start;
+}
+
+.forgot-password-buttons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.forgot-password-buttons button {
+  flex: 1;
+}
+
+.send-email-button {
+  background-color: #0c47be;
+  font-size: 18px;
+  font-family: monospace;
+  font-weight: bold;
+  color: #ffffff;
+  padding: 10px;
+  border: 2px solid #0c47be;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 24px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.send-email-button:hover {
+  background-color: #01359e;
+  color: white;
+}
+
+.success-message {
+  color: green;
+  font-size: 14px;
+}
