--- a/src/components/BannerComponent/BannerComponent.css
+++ b/src/components/BannerComponent/BannerComponent.css
@@ -5,8 +5,8 @@
 }
 
 .banner-img {
-  width: 1600px;
-  height: 400px;
+  width: 200%;
+  height: auto;
   object-fit: contain;
   transition: transform 0.5s ease, z-index 0.5s;
   z-index: 1;
@@ -21,6 +21,6 @@
 .swiper-slide {
   display: flex;
   justify-content: center;
-  overflow: visible; 
+  overflow: visible;
   position: relative;
 }
