--- a/src/components/BookingDetail/BookingDetail.css
+++ b/src/components/BookingDetail/BookingDetail.css
@@ -80,6 +80,15 @@
   word-break: break-word;
 }
 
+.movie-booking-showtimeType {
+  margin-top: 10px;
+  word-spacing: -3px;
+  font-family: monospace;
+  font-size: 16px;
+  color: #747474;
+  word-break: break-word;
+}
+
 .age-info {
   display: flex;
   align-items: center;
