--- a/src/components/TicketDetails/TicketDetails.css
+++ b/src/components/TicketDetails/TicketDetails.css
@@ -1,4 +1,4 @@
-.ticket-modal-overlay {
+.user-ticket-modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -7,11 +7,13 @@
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   z-index: 1000;
+  overflow-y: auto;
 }
 
-.ticket-modal-content {
+.user-ticket-modal-content {
+  margin-top: 2%;
   background: white;
   padding: 24px;
   border-radius: 12px;
