--- a/src/components/AddMovieComponent/AddMovieComponent.css
+++ b/src/components/AddMovieComponent/AddMovieComponent.css
@@ -307,6 +307,14 @@ textarea:focus {
   cursor: pointer;
 }
 
+.remove-actor-button:hover{
+  background: transparent;
+  border: none;
+  color: red;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 .form-error {
   color: red;
   font-size: 0.9rem;
