--- a/src/components/AddTheaterComponent/AddTheaterComponent.css
+++ b/src/components/AddTheaterComponent/AddTheaterComponent.css
@@ -12,14 +12,14 @@
   overflow-y: auto;
 }
 
-.input-column {
+.add-theater-input-column {
   word-spacing: -4px;
   display: grid;
-  grid-template-columns: 1fr 1fr; /* 2 cột bằng nhau */
-  gap: 24px; /* khoảng cách giữa các cột */
+  grid-template-columns: 1fr 1fr; 
+  gap: 24px; 
 }
 
-.input-column label {
+.add-theater-input-column label {
   word-spacing: -4px;
   display: block;
   margin-bottom: 4px;
@@ -28,14 +28,15 @@
   font-family: monospace;
 }
 
-.input-column input {
+.add-theater-input-column input {
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
   text-align: left;
 }
 
-.input-column select {
+.add-theater-input-column select {
+  margin-top: 5px;
   padding: 8px 10px;
   width: 100%;
   font-size: 16px;
